# aia-agent

./: .gitignore  README.md  mqtt_worker.py  pyproject.toml  render.yaml  requirements.txt
android-app/: README.md  gradlew  settings.gradle.kts
android-app/app/: build.gradle.kts  proguard-rules.pro
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/cl/tomi/aiaagent/: MainActivity.kt
android-app/app/src/main/java/cl/tomi/aiaagent/api/: EspWifiApi.kt  EstanqueApi.kt  RetrofitClient.kt
android-app/app/src/main/java/cl/tomi/aiaagent/cache/: DeviceCache.kt
android-app/app/src/main/java/cl/tomi/aiaagent/data/: EstanqueEstado.kt  ForzarGuardadoRequest.kt  ForzarGuardadoResponse.kt  NetworkDeviceItem.kt
android-app/app/src/main/java/cl/tomi/aiaagent/debug/: AppLog.kt
android-app/app/src/main/java/cl/tomi/aiaagent/udp/: UdpSocketManager.kt
android-app/app/src/main/java/cl/tomi/aiaagent/ui/: DeviceScanScreen.kt  EstanqueScreen.kt  SonarAnimation.kt
android-app/app/src/main/java/cl/tomi/aiaagent/viewmodel/: DeviceScanViewModel.kt  EstanqueViewModel.kt
android-app/app/src/main/res/drawable/: ic_launcher_background.xml
android-app/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android-app/docs/: API-WIFI-WEBSERVER-SPEC.md  BUILD-APK-SPEC.md  PROMPT-APP-DISCOVERY copy.md  PROMPT-APP-DISCOVERY.md  UDP-DISCOVERY-MICROCONTROLLER-SPEC.md  UDP-DISCOVERY-MICROCONTROLLER-SPECV2.md  UDP-WIFI-CONFIG-SPEC.md
workers/: __init__.py  mqtt_worker.py  whatsapp_reader.py  whatsapp_sender.py
